sh/iptables
# Generated by iptables-save v1.4.21 on Sun Oct 28 12:35:15 2018
*nat
:PREROUTING ACCEPT [24820812:2341275241]
:INPUT ACCEPT [10070751:640862530]
:OUTPUT ACCEPT [6468580:459322909]
:POSTROUTING ACCEPT [6464125:458040643]
-A PREROUTING -d 21.126.135.114/32 -i eth2 -p tcp -m tcp --dport 8000 -j DNAT --to-destination 192.168.121.185
-A POSTROUTING -s 192.168.121.0/24 -o eth2 -j SNAT --to-source 21.126.135.114
COMMIT
# Completed on Sun Oct 28 12:35:15 2018
# Generated by iptables-save v1.4.21 on Sun Oct 28 12:35:15 2018
*filter
:INPUT DROP [1675663:231258736]
:FORWARD DROP [0:0]
:OUTPUT DROP [8658:1547489]
-A INPUT -i lo -j ACCEPT
-A INPUT -p icmp -j ACCEPT
-A INPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A INPUT -p tcp -m tcp --dport 722 -m hashlimit --hashlimit-upto 6/hour --hashlimit-burst 2 --hashlimit-mode srcip --hashlimit-name ssh -j ACCEPT
-A INPUT -p tcp -m tcp --dport 21 -m conntrack --ctstate NEW -j ACCEPT
-A INPUT -p tcp -m tcp --dport 10090:10100 -m conntrack --ctstate NEW -j ACCEPT
-A INPUT -p udp -m conntrack --ctstate NEW -m udp --dport 53 -j ACCEPT
-A INPUT -p tcp -m conntrack --ctstate NEW -m tcp --dport 53 -j ACCEPT
-A INPUT -i eth0 -p udp -m conntrack --ctstate NEW -m udp --dport 67:68 -j ACCEPT
-A INPUT -i eth0 -p udp -m conntrack --ctstate NEW -m udp --dport 137:139 -j ACCEPT
-A INPUT -i eth0 -p tcp -m conntrack --ctstate NEW -m tcp --dport 137:139 -j ACCEPT
-A INPUT -i eth0 -p tcp -m conntrack --ctstate NEW -m tcp --dport 445 -j ACCEPT
-A INPUT -i eth0 -p tcp -m conntrack --ctstate NEW -m tcp --dport 631 -j ACCEPT
-A INPUT -i eth0 -p tcp -m conntrack --ctstate NEW -m tcp --dport 3128 -j ACCEPT
-A INPUT -i eth0 -p udp -m conntrack --ctstate NEW -m udp --dport 5353 -j ACCEPT
-A INPUT -p tcp -m conntrack --ctstate NEW -m tcp -m multiport --dports 5000,5222 -j ACCEPT
-A FORWARD -i eth2 -o eth0 -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -s 192.168.121.72/32 -i eth0 -o eth2 -p tcp -m tcp -m multiport --dports 80,443 -j ACCEPT
-A FORWARD -s 192.168.121.50/32 -i eth0 -o eth2 -p tcp -m tcp -m multiport --dports 80,443 -j ACCEPT
-A FORWARD -s 192.168.121.66/32 -i eth0 -o eth2 -p tcp -m tcp -m multiport --dports 80,443 -j ACCEPT
-A FORWARD -s 192.168.121.94/32 -i eth0 -o eth2 -p tcp -m tcp -m multiport --dports 80,443 -j ACCEPT
-A FORWARD -i eth0 -o eth2 -p tcp -m tcp -m multiport --dports 80,443 -j DROP
-A FORWARD -i eth0 -o eth2 -j ACCEPT
-A FORWARD -d 192.168.121.185/32 -i eth2 -o eth0 -p tcp -m tcp --dport 8000 -m conntrack --ctstate NEW -j ACCEPT
-A OUTPUT -o lo -j ACCEPT
-A OUTPUT -p icmp -j ACCEPT
-A OUTPUT -m conntrack --ctstate RELATED,ESTABLISHED -j ACCEPT
-A OUTPUT -o eth2 -p udp -m conntrack --ctstate NEW -m udp --dport 53 -j ACCEPT
-A OUTPUT -o eth2 -p tcp -m conntrack --ctstate NEW -m tcp --dport 53 -j ACCEPT
-A OUTPUT -o eth2 -p tcp -m conntrack --ctstate NEW -m tcp --dport 25 -j ACCEPT
-A OUTPUT -o eth2 -p udp -m conntrack --ctstate NEW -m udp --dport 123 -j ACCEPT
-A OUTPUT -o eth2 -p tcp -m conntrack --ctstate NEW -m multiport --dports 80,443 -j ACCEPT
-A OUTPUT -o eth0 -m conntrack --ctstate NEW -j ACCEPT
COMMIT
# Completed on Sun Oct 28 12:35:15 2018
